--- a/test_module/views/test_partner.xml
+++ b/test_module/views/test_partner.xml
@@ -38,7 +38,8 @@
         </record>
 
         <menuitem id="configuration_menu" name="Configuration"
-                  parent="main_openacademy_menu"/>
+                  parent="main_test_module_menu"
+                  sequence="2"/>
         <menuitem id="contact_menu" name="Contacts"
                   parent="configuration_menu"
                   action="contact_list_action"/>
