Change Partner to inside models

--- a/test_module/views/test_views.xml
+++ b/test_module/views/test_views.xml
@@ -70,11 +70,97 @@
             </field>
         </record>
 
+        <record model="ir.ui.view" id="view_opencad_course_kanban">
+            <field name="name">openacad.course.kanban</field>
+            <field name="model">test_module.course</field>
+            <field name="arch" type="xml">
+                <kanban default_group_by="name">
+                    <field name="color"/>
+                    <templates>
+                        <t t-name="kanban-box">
+                            <div
+                                   t-attf-class="oe_kanban_color_{{kanban_getcolor(record.color.raw_value)}}
+                                                 oe_kanban_global_click_edit oe_semantic_html_override
+                                                 oe_kanban_card {{record.group_fancy==1 ? 'eo_kanban_card_fancy':''}}">
+                                <div class="oe_dropdown_kanban">
+                                    
+                                    <div class="oe_dropdown_toggle">
+                                        <span class="oe_e">#</span>
+                                        <ul class="oe_dropdown_menu">
+                                            <li>
+                                                <a type="delete">Delete</a>
+                                            </li>
+                                            <li>
+                                                <ul class="oe_kanban_colorpicker" data-field="color"/>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <div class="oe_clear"></div>
+                                </div>
+                                <div t-attf-class="oe_kanban_content">
+                                    Course Name:
+                                    <field name="name"/>
+                                    <br/>
+                                    Description:
+                                    <field name="description"/>
+                                </div>
+                            </div>
+                        </t>
+                    </templates>
+                </kanban>
+            </field>
+        </record> 
+
+        <record model="ir.ui.view" id="view_opencad_session_kanban">
+            <field name="name">openacad.session.kanban</field>
+            <field name="model">test_module.session</field>
+            <field name="arch" type="xml">
+                <kanban default_group_by="course_id">
+                    <field name="color"/>
+                    <templates>
+                        <t t-name="kanban-box">
+                            <div
+                                   t-attf-class="oe_kanban_color_{{kanban_getcolor(record.color.raw_value)}}
+                                                 oe_kanban_global_click_edit oe_semantic_html_override
+                                                 oe_kanban_card {{record.group_fancy==1 ? 'eo_kanban_card_fancy':''}}">
+                                <div class="oe_dropdown_kanban">
+                                    
+                                    <div class="oe_dropdown_toggle">
+                                        <span class="oe_e">#</span>
+                                        <ul class="oe_dropdown_menu">
+                                            <li>
+                                                <a type="delete">Delete</a>
+                                            </li>
+                                            <li>
+                                                <ul class="oe_kanban_colorpicker" data-field="color"/>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <div class="oe_clear"></div>
+                                </div>
+                                <div t-attf-class="oe_kanban_content">
+                                    Session name:
+                                    <field name="name"/>
+                                    <br/>
+                                    Start date:
+                                    <field name="start_date"/>
+                                    <br/>
+                                    duration:
+                                    <field name="duration"/>
+                                </div>
+                            </div>
+                        </t>
+                    </templates>
+                </kanban>
+            </field>
+        </record> 
+
+
         <record model="ir.actions.act_window" id="course_list_action">
             <field name="name">Test Module</field>
             <field name="res_model">test_module.course</field>
             <field name="view_type">form</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">tree,form,kanban</field>
             <field name="help" type="html">
                 <p class="oe_view_nocontent_create">Create the first course
                 </p>
@@ -170,49 +256,7 @@
             </field>
         </record>
 
-        <record model="ir.ui.view" id="view_opencad_session_kanban">
-            <field name="name">openacad.session.kanban</field>
-            <field name="model">test_module.session</field>
-            <field name="arch" type="xml">
-                <kanban default_group_by="course_id">
-                    <field name="color"/>
-                    <templates>
-                        <t t-name="kanban-box">
-                            <div
-                                   t-attf-class="oe_kanban_color_{{kanban_getcolor(record.color.raw_value)}}
-                                                 oe_kanban_global_click_edit oe_semantic_html_override
-                                                 oe_kanban_card {{record.group_fancy==1 ? 'eo_kanban_card_fancy':''}}">
-                                <div class="oe_dropdown_kanban">
-                                    
-                                    <div class="oe_dropdown_toggle">
-                                        <span class="oe_e">#</span>
-                                        <ul class="oe_dropdown_menu">
-                                            <li>
-                                                <a type="delete">Delete</a>
-                                            </li>
-                                            <li>
-                                                <ul class="oe_kanban_colorpicker" data-field="color"/>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                    <div class="oe_clear"></div>
-                                </div>
-                                <div t-attf-class="oe_kanban_content">
-                                    Session name:
-                                    <field name="name"/>
-                                    <br/>
-                                    Start date:
-                                    <field name="start_date"/>
-                                    <br/>
-                                    duration:
-                                    <field name="duration"/>
-                                </div>
-                            </div>
-                        </t>
-                    </templates>
-                </kanban>
-            </field>
-        </record> 
+        
 
         <record model="ir.actions.act_window" id="session_list_action">
             <field name="name">Sessions</field>
